--- a/articles.json?v=0.1
+++ b/articles.json?v=0.1
@@ -69,6 +69,16 @@
             "url": "./bidenomics-a-monthly-review-july-2023.html",
             "image": "./assets/Article%20Photos/desantis.webp",
             "altText": "Liberal Orchard Graphic depicting President Biden with aviator glasses that have dollar signs over the lenses. There is text that says Bidenomics over his mouth with a white square background. In the bottom left corner it states Liberal Orchard. The background is blue."
+        },
+        {
+            "title": "8Bidenomics: A monthly review of the Economy - July",
+            "description": "Liberal Orchard's monthly recap of key economic indicators like Inflation, Consumer Debt, and GDP",
+            "author": "Liberal Orchard",
+            "date": "July 2023",
+            "topics": "economics,politics,biden",
+            "url": "./bidenomics-a-monthly-review-july-2023.html",
+            "image": "./assets/Article%20Photos/desantis.webp",
+            "altText": "Liberal Orchard Graphic depicting President Biden with aviator glasses that have dollar signs over the lenses. There is text that says Bidenomics over his mouth with a white square background. In the bottom left corner it states Liberal Orchard. The background is blue."
         }        
     ]
 }
